<resources>
    <string name="app_name">Book Application</string>
    <string name="search_book">Search Book</string>
    <string name="add_to_list">add to list</string>
    <string name="maps">maps</string>
    <string name="book_title">Book Title</string>
    <string name="publisher">Publisher</string>
    <string name="page_count">Page count</string>
    <string name="book">Book</string>
    <string name="status">Status</string>
    <string name="one_read">Read</string>
    <string name="not_read">Not Read</string>
    <string name="date_one">Date</string>
    <string name="tvdate">...</string>
    <string name="one_new_book">New Book</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_book">New Book</string>
    <string name="read">Read</string>
    <string name="label_date">Date</string>
    <string name="list_date">date</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="title_activity_maps3">MapsActivity3</string>
    <string name="delete_all">Delete All</string>
    <string name="textview">TextView</string>
    <string name="open_maps">open maps</string>
</resources>